--- a/src/style/notWatch/_global.scss
+++ b/src/style/notWatch/_global.scss
@@ -21,3 +21,9 @@ $base-size-mt: 40px;
   bottom: -3px;
   border-bottom: 6px solid #000; 
 }
+.col-4:last-of-type {
+  padding-left: 0;
+}
+.category {
+  margin-bottom: 15px;
+}
