--- a/src/style/notWatch/_global.scss
+++ b/src/style/notWatch/_global.scss
@@ -27,3 +27,9 @@ $base-size-mt: 40px;
 .category {
   margin-bottom: 15px;
 }
+.btn-primary {
+  background-color: #252525 !important;
+}
+.btn-main {
+  background-color: #66286a !important;
+}
