--- a/src/style/notWatch/_footer.scss
+++ b/src/style/notWatch/_footer.scss
@@ -1,19 +1,44 @@
 .footer {
-    .row {
-      padding-top: 100px;
-      padding-bottom: 100px;
-    }
-    background-color: #252525;
-    .head-line::after {
-      border-color: #66286a !important;
-    }
-    .list-group {
-      .list-group-item {
-        padding: 2px;
-        transition: all 0.3555s ease-in-out;
-        &:hover {
-          color: #66286a !important;
-        }
+  .row {
+    padding-top: 100px;
+    padding-bottom: 70px;
+  }
+  background-color: #252525;
+  .head-line::after {
+    border-color: #66286a !important;
+  }
+  .list-group {
+    .list-group-item {
+      padding: 6px;
+      font-size: 20px;
+      transition: all 0.3555s ease-in-out;
+      &:hover {
+        color: #66286a !important;
       }
     }
   }
+
+  .phone {
+    font-size: 13px;
+  }
+  .list-group-horizontal {
+    .list-group-item.active {
+      margin: 20px;
+      background-color: #e1da22;
+      color: #ffffff;
+    }
+    .list-group-item {
+      margin: 20px;
+      width: 40px;
+      height: 40px;
+      color: #393939;
+      background-color: #ffffff;
+      &:first-of-type {
+        margin-right: 0;
+      }
+      &:hover {
+        @extend .active;
+      }
+    }
+  }
+}
