img bind card done

--- a/src/style/notWatch/_global.scss
+++ b/src/style/notWatch/_global.scss
@@ -33,3 +33,6 @@ $base-size-mt: 40px;
 .btn-main {
   background-color: #66286a !important;
 }
+.shadow{
+  box-shadow: -2px 2px 0.5rem rgba(0,0,0,.15)!important;
+}
